add creditos and quizes

--- a/quizes.html
+++ b/quizes.html
@@ -29,7 +29,41 @@
     <section class="main" id="s1">
     
 	<div>
-	Aqui se visualizan las preguntas y los creditos ...
+		<form>
+			<!--<table>
+				<tr>
+					<td align="left">Email*</td>
+					<td align="left"> <input id="email" type="text"></td>
+				</tr>
+				<tr>
+					<td align="left">Respuesta correcta* </td>
+					<td align="left"><input id="correct" type="text" class="response"></td>
+				</tr>
+				<tr>
+					<td align="left">Respuesta incorrecta* <input id="incorrect1" type="text" class="response"></td>
+				</tr>
+				<tr>
+					<td align="left">Respuesta incorrecta* <input id="incorrect2" type="text" class="response"></td>
+				</tr>
+				<tr>
+					<td align="left">Respuesta incorrecta* <input id="incorrect3" type="text" class="response"></td>
+				</tr>
+				<tr>
+					<td align="left">Respuesta incorrecta* <input id="incorrect4" type="text" class="response"></td>
+				</tr>
+				<tr>
+					<td align="left">Complejidad (0-5)* <input id="complexity" type="text"></td>
+				</tr>
+				<tr>
+					<td align="left">Tema (subject)* <input id="subject" type="text"></td>
+				</tr>
+			</table>-->
+		<fieldset>
+
+		</fieldset>
+
+
+		</form>
 	</div>
     </section>
 	<footer class='main' id='f1'>
