--- a/creditos.html
+++ b/creditos.html
@@ -23,7 +23,7 @@
     </header>
 	<nav class='main' id='n1' role='navigation'>
 		<span><a href='layout.html'>Inicio</a></span>
-		<span><a href='quizes.html'>Insertar Pregunta</a></span>
+		<span><a href='preguntaHTML5.html'>Insertar Pregunta</a></span>
 		<span><a href='creditos.html'>Creditos</a></span>
 	</nav>
     <section class="main" id="s1" >
