add image function

--- a/preguntaHTML5.html
+++ b/preguntaHTML5.html
@@ -56,10 +56,13 @@
 					<td align="left">Tema (subject)*: <input id="subject" type="text" class="emailComplexSubj" required placeholder="Introduce un tema."></td>
 				</tr>
                 <tr>
-                    <td align="left"><button id="examine" >Examinar...</button> No se ha seleccionado ningún archivo </td>
+                    <td align="left"><input type="file" id="examine" ></td>
                 </tr>
                 <tr>
                     <td align="left"><button id="send" type="submit">Enviar solicitud</button> </td>
+                </tr>
+                <tr>
+                    <td><img id="image" width="200px" height="200px"/></td>
                 </tr>
 			</table>
 			<fieldset>
@@ -75,5 +78,25 @@
 		<a href='https://github.com'>Link GITHUB</a>
 	</footer>
 </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script>
+    function readURL(input) {
+
+        if (input.files && input.files[0]) {
+            var reader = new FileReader();
+
+            reader.onload = function(e) {
+                $('#image').attr('src', e.target.result);
+            };
+
+            reader.readAsDataURL(input.files[0]);
+        }
+    }
+
+    $("#examine").change(function() {
+        readURL(this);
+    });
+</script>
+
 </body>
 </html>
