--- a/preguntaHTML5.html
+++ b/preguntaHTML5.html
@@ -32,7 +32,7 @@
 		<form  id='questionForm' name='questionForm' onsubmit="return validateForm()" action="prueba.php" >
 			<table>
 				<tr>
-					<td align="left">Email*<input id="email" type="text" class="emailComplexSubj" required placeholder="Introduce un correo de la UPV-EHU."  pattern="^[a-z]+[0-9]{3}@ikasle\.ehu\.eus$"></td>
+					<td align="left">Email*: <input id="email" type="text" class="emailComplexSubj" required placeholder="Introduce un correo de la UPV-EHU."  pattern="^[a-z]+[0-9]{3}@ikasle\.ehu\.eus$"></td>
 				</tr>
 				<tr>
 					<td align="left">Enunciado de la pregunta*: <input id="question" type="text" class="response" required placeholder="Introduce una pregunta de al menos 10 carácteres." pattern="^.{10,}$"></td>
@@ -81,17 +81,14 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script>
     function readURL(input) {
-
         if (input.files && input.files[0]) {
             var reader = new FileReader();
-
+            reader.readAsDataURL(input.files[0]);
             reader.onload = function(e) {
                 var image = $('#image');
                 image.attr('src', e.target.result);
 				image.css("display","inline");
             };
-
-            reader.readAsDataURL(input.files[0]);
         }
     }
 
